# NXThumbnailer

./: .gitignore  Cargo.toml  README.md  flake.nix  meson.build
data/: meson.build  nxroms.thumbnailer  nxroms.xml  nxthumbnail.thumbnailer  nxthumbnail.xml
src/: extractor.rs  main.rs  meson.build
