[package]
name = "nxthumbnail"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.10"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "rayon"] }
log = "0.4.30"
nxroms = { git = "https://github.com/XtremeTHN/RustNXRoms", version = "0.1.0" }
thiserror = "2.0.18"
